package UserResponse;
import "data.proto";
import "UserData.proto";

// user login
message LoginResponse {
	optional string sid = 1;
    optional UserData.User_Info User_Info = 2;
}

// view user
message DetailResponse {
	optional bool is_follow = 1;
    optional UserData.User_Info User_Info = 2;
}

// is user exist
message UsernameExistResponse {
    optional bool is_exist = 1;
}

// follow list
message FollowListResponse {
    optional Data.List people_list = 1;
}

// followed list
message FollowedListResponse {
    optional Data.List people_list = 1;
}